12/09, 22:10 - refactor: JWT 로직 shared로 옮기기 + feat: 관리자 로직 구현